--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     text-align: center;
     margin-top: 30px;
     font-size: 12px;
-    color: #f7f1f1;
+    color: #58ff42;
   }
   .hidden {
     display: none;
