--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ input:checked{
       <div class="bot">
         <div class="nav-links">
           <div class="nav-link-wrapper"><a href=""><img src="https://img.icons8.com/android/22/ffffff/home.png"><span>Home</span></a></div>
-          <div class="nav-link-wrapper"><a href="http://127.0.0.1:3000/index.html"><img src="https://img.icons8.com/metro/22/ffffff/about.png"/><span>Tambah Data</span></a></div>
+          <div class="nav-link-wrapper"><a src="adds.html"><img src="https://img.icons8.com/metro/22/ffffff/about.png"/><span>Tambah Data</span></a></div>
           <div class="nav-link-wrapper"><a href=""><img src="https://img.icons8.com/metro/22/ffffff/download.png"><span>Download</span></a></div>
           <div class="nav-link-wrapper"><a href=""><img src="https://img.icons8.com/metro/22/ffffff/settings.png"/><span>Settings</span></a></div>
           <div class="nav-link-wrapper"><a href=""><img src="https://img.icons8.com/pastel-glyph/22/ffffff/online-support.png"/><span>Support</span></a></div>
