--- a/adds.html
+++ b/adds.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Permohonan Gardu</title>
+  <title>Pengisian Form Gardu</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -98,7 +98,7 @@
 
     <form name="form" action="https://script.google.com/macros/s/AKfycbzQGXM9_Qypeki1i1AE46Ct0zY6oHLr6GZWWKHsGTbfcSn2jRBKQr3ind-4PUqe01g/exec" method="post">
     <!-- end akses  -->
-    <input onclick="toggleVisibility()" type="checkbox"/> Permohonan Gardu
+    <input onclick="toggleVisibility()" type="button"/> Permohonan Gardu
 
     <div id="myElement" class="hidden">
       <h2>Identitas Gardu</h2>
