--- a/adds.html
+++ b/adds.html
@@ -98,7 +98,7 @@
 
     <form name="form" action="https://script.google.com/macros/s/AKfycbzQGXM9_Qypeki1i1AE46Ct0zY6oHLr6GZWWKHsGTbfcSn2jRBKQr3ind-4PUqe01g/exec" method="post">
     <!-- end akses  -->
-    <input onclick="toggleVisibility()" type="button"/> Permohonan Gardu
+    <input onclick="toggleVisibility()" type="button" value="Permohonan Gardu"/> 
 
     <div id="myElement" class="hidden">
       <h2>Identitas Gardu</h2>
@@ -128,7 +128,7 @@
       </div>
       <br>
       
-      <input onclick="toggleVisibility1()" type="checkbox"/> Identitas Trafo
+      <input onclick="toggleVisibility1()" type="button" value="Identitas Trafo"/> 
       <div id="myElement1" class="hidden">
       <h2>Identitas Trafo</h2>
         <label for="jenis_gardu">Jenis Gardu:</label>
@@ -145,7 +145,7 @@
       <br>
 
       
-      <input onclick="toggleVisibility2()" type="checkbox"/> Identitas PHBTR
+      <input onclick="toggleVisibility2()" type="button" value="Identitas PHBTR"/> 
       <div id="myElement2" class="hidden">
       <h2>Identitas PHBTR</h2>
         <label for="jumlah_jurusan">Jumlah Jurusan:</label>
