--- a/adds.html
+++ b/adds.html
@@ -41,8 +41,20 @@
     
     cursor: pointer;
   }
+  #form-container input[type="button"] {
+    background-color: ##3498DB;
+    color: #FFFFFF;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    
+    cursor: pointer;
+  }
   #form-container input[type="submit"]:hover {
     background-color: #004B8D;
+  }
+      #form-container input[type="button"]:hover {
+    background-color: #00FBFF;
   }
   #footer {
     text-align: center;
