--- a/adds.html
+++ b/adds.html
@@ -42,7 +42,7 @@
     cursor: pointer;
   }
   #form-container input[type="button"] {
-    background-color: ##3498DB;
+    background-color: #3498DB;
     color: #FFFFFF;
     border: none;
     border-radius: 5px;
@@ -115,6 +115,7 @@
     <div id="myElement" class="hidden">
       <h2>Identitas Gardu</h2>
         <label for="jenis_pekerjaan">Jenis Pekerjaan:</label>
+        <br>
       <input type="text" id="jenis_pekerjaan" name="jenis_pekerjaan" required>
         <label for="nama_pelanggan">Nama Pelanggan:</label>
       <input type="text" id="nama_pelanggan" name="nama_pelanggan" required>
@@ -141,6 +142,7 @@
       <br>
       
       <input onclick="toggleVisibility1()" type="button" value="Identitas Trafo"/> 
+      <br>
       <div id="myElement1" class="hidden">
       <h2>Identitas Trafo</h2>
         <label for="jenis_gardu">Jenis Gardu:</label>
@@ -158,6 +160,7 @@
 
       
       <input onclick="toggleVisibility2()" type="button" value="Identitas PHBTR"/> 
+        <br>
       <div id="myElement2" class="hidden">
       <h2>Identitas PHBTR</h2>
         <label for="jumlah_jurusan">Jumlah Jurusan:</label>
