--- a/adds.html
+++ b/adds.html
@@ -132,9 +132,9 @@
       	<label for="kabupaten">Kabupaten:</label>
       <input type="text" id="kabupaten" name="kabupaten" required>
         <label for="tglp">Tanggal Pasang:</label>
-      <input type="text" id="tglp" name="tglp" required>
+      <input type="date" id="tglp" name="tglp" required>
         <label for="tglo">Tanggal Operasi:</label>
-      <input type="text" id="tglo" name="tglo" required>
+      <input type="date" id="tglo" name="tglo" required>
       </div>
       <br>
       
